<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Auth Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="AuthController" customModule="JitenshaMobile" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lwi-3o-WIY">
                                <rect key="frame" x="47.5" y="288.5" width="280" height="50"/>
                                <color key="backgroundColor" red="0.17182767391204834" green="0.24141353368759155" blue="0.30919453501701355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="280" id="A0s-fU-8LS"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="alert"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AMe-NU-BQh">
                                <rect key="frame" x="47.5" y="358.5" width="280" height="50"/>
                                <color key="backgroundColor" red="0.17182767391204834" green="0.24141353368759155" blue="0.30919453501701355" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" priority="750" constant="280" id="6yf-mZ-VN4"/>
                                    <constraint firstAttribute="height" constant="50" id="ldS-ua-82w"/>
                                </constraints>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="alert" secureTextEntry="YES"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y6c-0Z-aAz">
                                <rect key="frame" x="47.5" y="455" width="280" height="50"/>
                                <color key="backgroundColor" red="0.0019241952104493976" green="0.60013043880462646" blue="0.73284763097763062" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="login" destination="BYZ-38-t0r" eventType="touchUpInside" id="Qxw-3S-lyL"/>
                                </connections>
                            </button>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jitensha" translatesAutoresizingMaskIntoConstraints="NO" id="Ufn-PA-OTO">
                                <rect key="frame" x="113" y="81" width="149" height="149"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="Ufn-PA-OTO" secondAttribute="height" id="khc-gO-dy9"/>
                                    <constraint firstAttribute="height" constant="149" id="oTb-Hd-AYU"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" tag="20" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zMk-Kl-p3q">
                                <rect key="frame" x="47.5" y="522.5" width="280" height="50"/>
                                <color key="backgroundColor" red="0.75294117650000003" green="0.089024203430000004" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="signup" destination="BYZ-38-t0r" eventType="touchUpInside" id="sTu-R5-4IC"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="0.12941176469999999" green="0.1843137255" blue="0.24313725489999999" alpha="1" colorSpace="calibratedRGB"/>
                        <constraints>
                            <constraint firstItem="Y6c-0Z-aAz" firstAttribute="centerX" secondItem="AMe-NU-BQh" secondAttribute="centerX" id="0nI-tR-9Nh"/>
                            <constraint firstItem="Y6c-0Z-aAz" firstAttribute="top" secondItem="AMe-NU-BQh" secondAttribute="bottom" constant="46.5" id="1wO-GJ-BPu"/>
                            <constraint firstItem="zMk-Kl-p3q" firstAttribute="leading" secondItem="Y6c-0Z-aAz" secondAttribute="leading" id="82G-Cf-iqR"/>
                            <constraint firstItem="lwi-3o-WIY" firstAttribute="width" secondItem="AMe-NU-BQh" secondAttribute="width" id="8qH-v9-RR0"/>
                            <constraint firstItem="lwi-3o-WIY" firstAttribute="height" secondItem="AMe-NU-BQh" secondAttribute="height" id="HuG-sA-zK0"/>
                            <constraint firstAttribute="trailingMargin" secondItem="AMe-NU-BQh" secondAttribute="trailing" priority="750" constant="20" id="LHc-pX-qtM"/>
                            <constraint firstItem="zMk-Kl-p3q" firstAttribute="height" secondItem="Y6c-0Z-aAz" secondAttribute="height" id="LnR-zz-VmX"/>
                            <constraint firstItem="AMe-NU-BQh" firstAttribute="top" secondItem="lwi-3o-WIY" secondAttribute="bottom" constant="20" id="N7N-wK-Xtm"/>
                            <constraint firstItem="AMe-NU-BQh" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="50" id="SB9-sd-PXu"/>
                            <constraint firstItem="AMe-NU-BQh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UEm-sK-jmz"/>
                            <constraint firstItem="Y6c-0Z-aAz" firstAttribute="height" secondItem="AMe-NU-BQh" secondAttribute="height" id="UfT-di-RVN"/>
                            <constraint firstItem="lwi-3o-WIY" firstAttribute="leading" secondItem="AMe-NU-BQh" secondAttribute="leading" id="UsG-ES-5KC"/>
                            <constraint firstItem="lwi-3o-WIY" firstAttribute="top" secondItem="Ufn-PA-OTO" secondAttribute="bottom" constant="58.5" id="XcB-uf-dkb"/>
                            <constraint firstItem="Ufn-PA-OTO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aLa-7g-Jj4"/>
                            <constraint firstItem="zMk-Kl-p3q" firstAttribute="top" secondItem="Y6c-0Z-aAz" secondAttribute="bottom" constant="17.5" id="cn7-pt-Fs7"/>
                            <constraint firstItem="zMk-Kl-p3q" firstAttribute="width" secondItem="Y6c-0Z-aAz" secondAttribute="width" id="eQu-pP-Jo5"/>
                            <constraint firstAttribute="leadingMargin" secondItem="AMe-NU-BQh" secondAttribute="leading" priority="750" constant="20" id="mti-Iv-noA"/>
                            <constraint firstItem="lwi-3o-WIY" firstAttribute="trailing" secondItem="AMe-NU-BQh" secondAttribute="trailing" id="r3c-p0-XaL"/>
                            <constraint firstItem="Y6c-0Z-aAz" firstAttribute="width" secondItem="AMe-NU-BQh" secondAttribute="width" id="uLM-Ow-asL"/>
                            <constraint firstItem="zMk-Kl-p3q" firstAttribute="trailing" secondItem="Y6c-0Z-aAz" secondAttribute="trailing" id="uZO-VR-VrQ"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="GJI-eW-T3N"/>
                    <nil key="simulatedTopBarMetrics"/>
                    <connections>
                        <outlet property="emailField" destination="lwi-3o-WIY" id="7W6-GK-nhl"/>
                        <outlet property="passwordField" destination="AMe-NU-BQh" id="CEW-cj-mHf"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-772" y="42"/>
        </scene>
    </scenes>
    <resources>
        <image name="jitensha" width="347" height="341"/>
    </resources>
</document>
